# rust-template

./: Cargo.toml
dev/: settings.json
src/: app.rs  config.rs  main.rs
src/core/: mod.rs  signal.rs
src/features/: mod.rs
src/features/input_feature/: classes.rs  service.rs
src/features/settings_feature/: classes.rs  mod.rs  service.rs
src/modules/: mod.rs  paths.rs  shared.rs
src/ui/: mod.rs
src/ui/components/: mod.rs
