[package]
name = "rust_template"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = { version = "0.15.24", features = ["json"] }
winit = "0.30.11"
global-hotkey = { version = "0.8.0", features = ["serde"] }